# RustyML

./: Cargo.toml  LICENSE  README.md  changelog.md
src/: dataset.rs  lib.rs  machine_learning.rs  machine_learning_test.rs  math.rs  math_module_test.rs  metric.rs  metric_module_test.rs  neural_network.rs  neural_network_test.rs  prelude.rs  utility.rs  utility_test.rs
src/dataset/: diabetes.rs  iris.rs
src/machine_learning/: dbscan.rs  decision_tree.rs  isolation_forest.rs  kmeans.rs  knn.rs  linear_discriminant_analysis.rs  linear_regression.rs  linear_svc.rs  logistic_regression.rs  meanshift.rs  principal_component_analysis.rs  svc.rs
src/machine_learning_test/: dbscan_test.rs  decision_tree_test.rs  isolation_forest_test.rs  isolation_tree_test.rs  kmeans_test.rs  knn_test.rs  linear_regression_test.rs  linear_svc_test.rs  logistic_regression_test.rs  meanshift_test.rs  principal_component_analysis_test.rs  svc_test.rs
src/neural_network/: layer.rs  loss_function.rs  optimizer.rs  sequential.rs
src/utility/: kernel_pca.rs  linear_discriminant_analysis.rs  principal_component_analysis.rs  t_sne.rs  train_test_split.rs
src/utility_test/: kernel_pca_test.rs  linear_discriminant_analysis_test.rs  principal_component_analysis_test.rs  t_sne_test.rs  train_test_split_test.rs
