[package]
name = "rustyml"
version = "0.4.0"
edition = "2024"
authors = ["SomeB1oody <stanyin64@gmail.com>"]
description = "A high-performance machine learning library in pure Rust, offering statistical utilities, ML algorithms, and future support for neural networks and transformer architectures."
license = "MIT"
homepage = "https://github.com/SomeB1oody/RustyML"
readme = "README.md"
keywords = ["machine-learning", "ML", "Deep-learning", "DL", "AI"]
repository = "https://github.com/SomeB1oody/RustyML"

[dependencies]
ndarray = { version = "0.16.1", features = ["rayon"] }
rand = "0.9.0"
ndarray-linalg = { version = "0.17.0", default-features = false, features = ["openblas-static"] }
statrs = "0.18.0"
rand_distr = "0.5.1"
rayon = "1.10.0"

[dev-dependencies]
approx = "0.5.1"